# rclshark

./: .gitignore  .gitmodules  Dockerfile  README.md  install.bash  rclshark_docker.bash
computer_msgs/: CMakeLists.txt  README.md  package.xml
computer_msgs/msg/: PcStatus.msg
computer_msgs/srv/: PcStatusSrv.srv
images_for_readme/: rclshark_logo.pptx
rclshark/: install.bash  package.xml  rclshark.bash  setup.cfg  setup.py
rclshark-smi/: README.md  install.bash  package.xml  rclshark-smi  rclshark-smi.py  rclshark_smi_main.py  setup.cfg  setup.py
rclshark-smi/scripts/: rclshark_smi.py
rclshark/rclshark/: __init__.py  rclshark.py
rclshark/scripts/: rclshark.py
rclshark/service/: .gitignore  rclshark.service
rclshark/supervisor/: install_docker.sh  rclshark_docker.bash  rclshark_supervisor.conf
rclshark_msgs/: .gitignore  CMakeLists.txt  README.md  package.xml
rclshark_msgs/msg/: PcStatus.msg
rclsharkc/: CMakeLists.txt
rclsharkc/src/: rclshark_light.c
