<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>computer_msgs</name>
  <version>1.1.5</version>
  <description>computer_msgs pkg</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache-2.0 License</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>