<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclshark</name>
  <version>1.0.1</version>
  <description>The rclshark package</description>
  <maintainer email="ray255ar@gmail.com">ubuntu</maintainer>
  <license>Apache License, Version 2.0</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>